--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,7 @@
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
+body {
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+		'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
