--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,11 @@ body h1 {
 	text-align: center;
 	margin: 1.5rem auto;
 }
+article {
+	width: 100%;
+	height: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	margin: auto;
+}
