--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,17 @@ article .game p {
 	padding: 0.5rem;
 	font-size: 1.5rem;
 }
+article #keyboard {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin: 0.4rem auto;
+}
